# PiTracer

./: .dockerignore  .editorconfig  CMakeLists.txt  CMakePresets.json  PiTracer.sln
Adapter/src/: ArmoniK.Samples.PiTracer.Adapter.csproj  LoggerExt.cs  Sphere.cs  TracerPayload.cs  TracerResult.cs  Xoshiro.cs
Client/: bench.py  client.py  client_wrapper.py  main.py  main_old.py  objects_pb2.py  requirement.txt  requirements.txt  submitter_service_pb2.py  submitter_service_pb2_grpc.py  task_status_pb2.py
Client/tracer/: display.py  objects.py  retriever.py  scene.py  shared_context.py  watcher.py
CppWorker/: CMakeLists.txt  CppWorker.cpp  CppWorker.h  ITaskHandler.cpp  ITaskHandler.h  StreamWrapper.cpp  StreamWrapper.h  TaskHandler.cpp  TaskHandler.h
CppWorker/service/: objects.grpc.pb.cc  objects.grpc.pb.h  objects.pb.cc  objects.pb.h  task_status.grpc.pb.cc  task_status.grpc.pb.h  task_status.pb.cc  task_status.pb.h  worker_service.grpc.pb.cc  worker_service.grpc.pb.h  worker_service.pb.cc  worker_service.pb.h
GridWorker/src/: ApplicationLifeTimeManager.cs  ArmoniK.Samples.PiTracer.GridWorker.csproj  Dockerfile.Copy  Program.cs  SampleComputerService.cs
LocalTests/: LocalTests.csproj  Program.cs
PiTracerLib/PiTracerLib/: BitConverterExt.cs  Camera.cs  FastSqrt.cs  PiTracerLib.csproj  Scene.cs  Sphere.cs  (+6 more)
PiTracerStandalone/: PiTracerStandalone.csproj  Program.cs
PiTracerWorker/: Dockerfile  Dockerfile.net7  Dockerfile.net8  PiTracerWorker.csproj  Program.cs  SampleComputerService.cs  SimpleBlas.cs  Sphere.cs  TracerPayload.cs  TracerResult.cs  Xoshiro.cs
(+4 files in other folders)
